# zzutil

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  testutil.c  testutil.h  udpreceiver.c  udpsender.c
cache/: CMakeLists.txt
cmake/: zzutil-config.cmake.in
depends/: .gitignore  CMakeLists.txt  Makefile  build.sh  ffmpeg.cmake
example/: CMakeLists.txt  cachetest.c  testutil.c  testutil.h  udpreceiver.c  udpsender.c
include/zzutil/: basetype.h  encrypt.h  errmsg.h  zzcache.h  zzcapture.h  zzcrypt.h  zzhex.h  zzmessage.h
lib/ffmpeg/cmake/: ffmpeg.cmake
lib/ffmpeg/libwin32/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
lib/openssl/win32/lib/: libcrypto-3.def  libcrypto.lib  libssl-3.def  libssl.lib
lib/skf/cmake/: skf.cmake
lib/skf/include/: skf.h  skf_type.h
lib/skf/lib/: SKF_ukey_x86_32_1.6.21.0728.lib  SKF_ukey_x86_64_1.6.21.0728.lib  version
lib/usbkey/cmake/: usbkey.cmake
lib/usbkey/include/: base_type.h
lib/usbkey/lib/: SKF_ukey_x86_32_1.6.21.0728.lib
message/: CMakeLists.txt  README.md  basetype.c  basetype.h  errmsg.h  zzmessage.c  zzmessage.h
res/: sm2.pri  sm2.pub
scripts/: build.ps1  config.ps1  install.ps1
src/: CMakeLists.txt  zzcache.c  zzcapture.c  zzcrypt.c  zzhex.c  zzmessage.c
src/common/: helper.c  helper.h
test/: CMakeLists.txt  capture_test.c  crypt_test.c  get-network-interfaces.c  test_cache.c  test_crypt.c  test_message_udpreceiver.c  test_message_udpsender.c  testutil.h  udpreceiver.c  udpsender.c
udp_verify_test/: CMakeLists.txt  testutil.h  udpreceiver.c  udpsender.c
zzcache/: CMakeLists.txt
zzutil/: CMakeLists.txt
zzutil/cache/: zzcache.c
zzutil/cmake/: zzutilConfig.cmake.in
zzutil/include/zzutil/: basetype.h  errmsg.h  zzcache.h  zzmessage.h
zzutil/message/: zzmessage.c
zzutil/util/: basetype.c
